--- a/simple-webapp/src/main/webapp/WEB-INF/web.xml
+++ b/simple-webapp/src/main/webapp/WEB-INF/web.xml
@@ -6,7 +6,7 @@
    metadata-complete="false">
 
     <login-config>
-        <auth-method>BASIC</auth-method>
+        <auth-method>KEYCLOAK</auth-method>
         <realm-name>Simple Realm</realm-name>
     </login-config>
 
