--- a/simplified-bootable-webapp/pom.xml
+++ b/simplified-bootable-webapp/pom.xml
@@ -12,7 +12,7 @@
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
 
-        <version.keycloak>12.0.0-SNAPSHOT</version.keycloak>
+        <version.keycloak>9.0.6-SNAPSHOT</version.keycloak>
         <version.wildfly>20.0.1.Final</version.wildfly>
         <version.wildfly.jar.maven.plugin>2.0.0.Beta3</version.wildfly.jar.maven.plugin>
         <version.jboss.spec.javaee.7.0>1.0.3.Final</version.jboss.spec.javaee.7.0>
@@ -74,14 +74,14 @@
                 <configuration>
                     <feature-packs>
                         <feature-pack>
-                            <location>wildfly@maven(org.jboss.universe:community-universe):current#${version.wildfly}</location>
+                            <location>wildfly@maven(org.jboss.universe:community-universe):current</location>
                             <inherit-configs>false</inherit-configs>
                             <inherit-packages>false</inherit-packages>
                         </feature-pack>
                         <feature-pack>
                             <groupId>org.keycloak</groupId>
                             <artifactId>keycloak-adapter-galleon-pack</artifactId>
-                            <version>${version.keycloak}</version>
+                            <version>12.0.1</version>
                             <inherit-configs>false</inherit-configs>
                             <inherit-packages>false</inherit-packages>
                         </feature-pack>
